--- a/10-前端之禅/01.3-内存管理-内存泄露与管理.md
+++ b/10-前端之禅/01.3-内存管理-内存泄露与管理.md
@@ -1,4 +1,4 @@
-# 01-内存管理 -3-内存泄露与管理
+# 01.3-内存管理-内存泄露与管理
 
 ## 一 内存泄露
 
@@ -55,18 +55,22 @@ var outer = function () {
 
 - 浏览器的任务管理器查看：用来判断当前网页是否存在内存一直上升
 - Timeline 时序图：Chrome 的性能分析工具 Performance，注意要勾选 内存选项。
-- 堆快照查找分离 DOM：位于浏览器的内存工具，可以找到代码中需要释放的 DOM，必须不再使用的 ul，据此可以在代码中设置 `ulDom=null`
+- 堆快照查找分离 DOM：位于浏览器的内存工具，可以找到代码中需要释放的 DOM
 
-如果应用在频繁 GC，就会导致应用假死，让用户感知到卡顿现象，判断是否存在频繁 GC：
+如果应用在频繁 GC，就会导致应用假死，让用户感知到卡顿现象，判断是否存在频繁 GC 方法：
 
 - Timeline 中频繁的上升下降
 - 任务管理器中数据频繁的增加减小
 
 ## 二 内存优化
 
-### 2.1 常见基础优化
+### 2.1 减少全局变量的使用
 
-优化内存占用的最佳手段就是保证在执行代码时只保存必要的数据，即：尽量减少全局变量的定义，减少 window 上的挂载量，尽量减少不必要的全局查找都可以有效降低 GC 负荷。
+优化内存占用的最佳手段就是保证在执行代码时只保存必要的数据，即：
+
+- 尽量减少全局变量的定义
+- 减少 window 上的挂载量
+- 尽量减少不必要的全局查找
 
 ```js
 function fn() {
@@ -74,42 +78,6 @@ function fn() {
   // 使用 h 而不使用 window.innerHeight
 }
 ```
-
-使用 null 避免循环引用：
-
-```js
-function fn() {
-  let obj = document.querySelector('.box')
-  box.onclick = function () {
-    console.log(this)
-  }
-  obj = null // 当场断开引用，避免循环
-}
-```
-
-当然也可以更换为这种方案：
-
-```js
-function action() {
-  console.log(this)
-}
-
-function fn() {
-  let obj = document.querySelector('.box')
-  box.onclick = action
-}
-```
-
-采用字面量替换 new：
-
-```js
-let arr1 = [] // 推荐
-let arr2 = new Object() //不推荐：new 的额外操作较多，多涉及了一次 Object() 函数的调用
-```
-
-采用事件委托，给多个元素循环添加事件。
-
-使用文档碎片代替 append。
 
 ### 2.2 作用域未释放问题
 
@@ -308,6 +276,24 @@ vectorList.push(vector)
 最简单的缓存限制策略就是查看键值对数量，当键值对数量达到最大限制时，删除最初添加的数据。当然这种做法显然也是不成熟的，推荐查看 npm 作者实现的 LRU 算法：<https://github.com/isaacs/node-lru-cache>。
 
 缓存数据交给一些专业的内存管理工具处理，如：Redis 数据库、Kafka 消息队列。
+
+### 2.5 文档碎片代替 append
+
+大量 DOM 节点更新时可以采用文档碎片代替 append：
+
+```js
+// for (let i = 0; i < 1000; i++) {
+//   let el = document.createElement('li')
+//   document.body.appendChild(el)
+// }
+
+let frg = document.createDocumentFragment()
+for (let i = 0; i < 1000; i++) {
+  let el = document.createElement('li')
+  frg.appendChild(el)
+}
+document.body.appendChild(frg)
+```
 
 ## 三 深入 JS 运行时
 
