--- a/11-客户端框架-Electron/01.1-Elecron简介.md
+++ b/11-客户端框架-Electron/01.1-Elecron简介.md
@@ -4,21 +4,16 @@
 
 桌面客户端开发常用的库是：QT、GTK、MFC，他们都是基于 C++开发的，开发效率较低，虽然现在也有基于 Go、Py 的 QT，但是仍然存在一定的缺陷。
 
-2011 年，中国英特尔的王文睿开发了 node-webkit 库，用来操作 Webkit，后开该项目失败，却衍生出了跨平台开发框架 NW.js，node-webkit 团队成员赵成到了 Github 团队后开发出了类 node-webkit 项目：Atom Shell，即 Electron 的前身。
+2011 年，中国英特尔的王文睿开发了 node-webkit 库，用来操作 Webkit，在此基础上衍生出了跨平台开发框架 NW.js，node-webkit 团队成员赵成到了 Github 团队后开发出了类 node-webkit 项目：Atom Shell，即 Electron 的前身。
 
 NW.js 与 Electron 都是基于 Node、Webkit 这 2 种技术的跨平台（Win、Mac、Linux）桌面应用开发框架，通过该框架可以利用 HTML、CSS、JavaScript 等 web 前端技术来开发跨平台桌面应用，其理念是将 Chromium、Node 进行结合：
 
 - Chromium Content Module：Chromium 的核心组件，包含浏览器核心功能：Blink 渲染引擎、JS 的 V8 引擎，以及提供在单独进程渲染 Web 页面、加速 GPU 等功能
 - Node.js 运行时：可以访问本地文件系统、创建服务器、从外部模块加载文件
 
-前者可以负责图形的渲染，后者可以实现对本地文件、网络的访问，互相补充，框架再封装一些系统对话框、托盘、菜单、剪切板等功能，就能基本上满足桌面客户端的所有功能。
+Chromium 可以负责图形的渲染，Node.js 则可以实现对本地文件、网络的访问，互相补充，框架再封装一些系统对话框、托盘、菜单、剪切板等功能，就能基本上满足桌面客户端的所有功能。
 
-但是这 2 个框架在整合 Chromium、Node 也有区别：
-
-- NW.js：NW.js 修改了源码合并了 Chromium 和 Node 的事件循环机制，所以只有一个进程，所有窗口共享一个 Node.js 环境。
-- Electron：Electron 利用操作系统的消息循环机制打通 Chromium 和 Node，所以包含主进程、渲染进程，利用 ipc 实现进程间通信。
-
-Electron 现在社区更加活跃，库也更加丰富，其著名实现案例是 VSCode、Skype、国内的飞书。
+Electron 社区活跃，周边库丰富，其著名实现案例是 VSCode、Skype、国内的飞书。
 
 ## 二 Electron 的优劣
 
@@ -35,7 +30,7 @@ Electron 的劣势：
 - Chromium 带来的资源占用较大问题
 - 一些安全性模块默认不可用，在不得不开启后，会引起一些安全隐患
 
-此外，Electron 不支持旧版系统，如 WindowsXP。
+此外，Electron 不支持旧版系统，如 WindowsXP。注意 Electron22 及其以下版本才支持 win7！
 
 Electron 也有一些竞争者，不乏理念上不同的开发方式，如 PWA，PWA 无需像 Electron 这样还需要安装软件安装包，而是利用浏览器直接就能缓存一个本地客户端。但是 PWA 在不同操作系统支持度不同，其推广方 Google 目前也并未投入过多资源。
 
@@ -183,86 +178,6 @@ git clone https://github.com/electron/electron-quick-start cd
 electron-quick-start npm install && npm start
 ```
 
-## 四 Electron Electron API
+## 四 Electron 与 vue、react 的集成
 
-Electron API 项目集成了大量官方的 API 演示案例，[网址](https://github.com/electron/electron-api-demos)为：<https://github.com/electron/electron-api-demos>
-
-## 五 Electron 集成现代框架
-
-### 5.1 Electron 集成 Vue
-
-Vue 集成 Electron，不需要使用示例项目，其 cli 工具直接支持：
-
-```txt
-# 安装 vue cli 工具
-npm i @vue/cli -g
-
-# 创建项目
-vue create project
-
-# 进入项目后，集成 electron
-vue add electron-builder  # 添加 background.js 为主进程入口，main.js 是渲染进程入口
-
-# 贴士：该步骤容易因为网络原因卡住，可以切换源，或者使用 yarn -add -D electron-chromedriver
-
-# 启动 npm run
-electron:serve
-```
-
-bug 解决：此时国内环境是无法直接启动的，是因为要安装 dev-tools，这个需要翻墙，可以暂时注释
-
-```js
-// 注释掉 src / background.js 中的以下代码就行了;
-// if (isDevelopment && !process.env.IS_TEST) {
-//   // Install Vue Devtools
-//   try {
-//     await installVueDevtools();
-//   } catch (e) {
-//     console.error("Vue Devtools failed to install:", e.toString());
-//   }
-// }
-```
-
-其他 bug 解决：<https://www.psvmc.cn/article/2019-11-05-vue-cli3-electron.html>
-
-### 5.2 Electron 与 vue-element-admin 的集成示例
-
-该示例可以直接启动，在 .vscode 目录中创建了调试工具环境：
-<https://github.com/ry-cli/electron-vue-element-admin>
-
-### 5.3 Electron 集成 React
-
-原生继承示例：使用 create-react-app 工具创建 react 项目，进入该项目手动后集成 electron：
-
-```txt
-# 第一步：安装 electron，以及一些需要的软件
-npm i electron -D
-
-# 第二步：项目根目录（src 同级目录）创建 main.js，内容与 3.1 相同
-
-# 第三步：增加 package.json 键值对：此时当 yarn start 后，再运行 electron . 项目初级结构已经完成
-"main": "main.js",          // 设定入口文件
-"homepage": "./",           // 解决 electron file 协议导致生产环境加载 index.html 资源 404 问题
-
-# 第四步：配置 electron 的启动项脚本。如果想要启动时开启浏览器，则可以移除 cross-env BROWSER=none
-npm i concurrently -D    用来运行跨平台脚本，并支持一个 npm 脚本中运行多个命令
-npm i wait-on -D         用来等待 web 服务启动后才启动 electron
-npm i cross-env -D       用来执行一些跨平台命令
-"dev": "concurrently \"wait-on http://localhost:3000 && electron .\" \"cross-env BROWSER=none npm start\"",
-```
-
-目前较为活跃的集成示例是：<https://github.com/electron-react-boilerplate/electron-react-boilerplate>
-
-当然为了规避 Electron 打包体积大，提升性能，推荐使用：ProtonNative(<https://github.com/kusti8/proton-native)>，该项目优点：
-
-- 与 ReactNative 语法一直，可以使用 React 生态，如 Redux
-- 也可以使用 Node.js 生态中的包
-- 组件为系统原生组件，不再是浏览器
-
-### 5.4 Electron 集成 Angular
-
-目前较为活跃的集成示例是：<https://github.com/maximegris/angular-electron>
-
-### 5.5 Electron 集成 Webpack
-
-很少用到单独集成 Webpack 的项目，为了以防万一，直接按照该示例操作即可：<https://github.com/ry-cli/electron-webpack>
+==TODO==
