更新原型链细节

--- a/01-JavaScript基础语法/09.4-面向对象-原型与原型链.md
+++ b/01-JavaScript基础语法/09.4-面向对象-原型与原型链.md
@@ -2,55 +2,77 @@
 
 ## 一 理解原型
 
-### 1.1 原型对象
+### 1.1 构造函数的原型对象
 
-所有的函数（`当然也含构造函数`）都会拥有一个 `prototype` 属性，该属性即是原型对象的引用，我们称之为函数的**原型对象**，为了与对象的原型`__proto__`相区分也有人称为**显式原型对象**，
+一个函数往往包含下列 2 个属性：
 
-当执行`new Person()`时，返回的**实例对象** 除了手动创建的 `this.age=18` 的age属性外，默认还会创建`__proto__`属性 指向这个构造函数的**显式原型对象**
+- `prototype`：函数原型对象，也称之为 **显式原型对象**。
+- `__proto__`：向上指向生成该函数的构造函数，为了区分，也称之为 **隐式原型对象**。该属性不是标准属性，但是已经被各大浏览器接受并实现。
 
-`__proto__`属性指向的值一般称之为对象的隐式原型对象（为了与函数的`prototype`进行区分），
-
-这样做可以让多个**实例对象**间的通用方法来自同一个`__proto__`，减少空间占用！
+所有的函数（`当然也含构造函数`）都拥有自己的原型对象，即 `prototype` 属性：
 
 ```js
-function Person(){
-   this.age=18
+class Person {
+  constructor(name, age) {
+    this.name = name
+    this.age = age
+  }
+  run() {
+    console.log(this.name, ' is running!')
+  }
 }
-let p=new Person()
+
+// 包含 constructor、run 方法
+console.log('Person.prototype = ', Person.prototype) //  {constructor、run }
+// __proto__ 指向 Person 对象这个函数作为实例时，new出他的构造方法
+console.log('Person.__proto__ = ', Person.__proto__) //  ƒ () { [native code] }
+
+console.log(Person.prototype.constructor === Person) // true
 ```
 
-而**显式原型对象**默认会获得两个属性：
-
-- `constructor`：指向与**显式原型对象**关联的构造函数
-- `__proto__`：指向其构造函数的原型，默认（可以被修改）是 **构造函数Object**的**显示原型对象**。该属性不是标准属性，但是已经被各大浏览器接受并实现。
-
-其对应关系如图：
-
-![原型关系](../images/javascript/prototype-01.svg)
+从该函数往子级看：当构造函数 Person 执行 `new` 操作生成实例 p 时，除了会手动创建类似 `this.age = 18` 的 age 属性外，默认还会创建`__proto__`属性 指向这个构造函数的**显式原型对象**：
 
 ```js
-class Person {}
-console.log(Person.prototype) // { constructor: f Person(), __proto__: Object}
-console.log(Person.prototype.constructor === Person) // true
+let p = new Person('张三', 30)
 
-console.log(Person.prototype.__proto__.constructor === Object) // true
+// 实例上没有prototype属性，而是 __proto__
+console.log('p.prototype = ', p.prototype) // undefined，new 出来的没有添加该属性
+// __proto__ 指向 Person 对象这个函数作为实例时的构造方法
+console.log('p.__proto__ = ', p.__proto__) // {contructor, run}
 
+console.log(p.__proto__ === Person.prototype) // true
+console.log(p.constructor === Person) // true
+```
+
+其关系如图：
+![原型关系](../images/javascript/prototype-00-1.drawio.svg)
+
+贴士：将实例的方法存储在 `__proto__` 中可以让多个**实例对象**间的通用方法来自同一个`__proto__`，减少空间占用，如下所示：
+
+```js
+let p1 = new Person('张三', 30)
+let p2 = new Person('李四', 20)
+console.log(p1.__proto__ === p2.__proto__) // true
+```
+
+### 1.2 原型对象的产生
+
+从构造函数往其父级看：`Person.property` 对象的 `__proto__` 属性默认指向一个 Object 构造函数的实例对象，这个对象内部有两个 2 默认携带的属性（方法）：`__proto__`、`constructor`。
+
+```js
 // 正常的原型链都会终止于 Object 的原型对象
+console.log(Person.prototype.__proto__)
 console.log(Person.prototype.__proto__ === Object.prototype) // true
 console.log(Person.prototype.__proto__.__proto__ === null) // true
 
-// 实例与构造函数没有直接联系，与原型对象有直接联系
-let p = new Person()
-console.log(p.prototype) // undefined，因为是手动 new 出来的实例，我们没有添加该属性
-console.log(p.__proto__ == Person.prototype) // true
-conosle.log(p.__proto__.constructor === Person) // true
+console.log(Person.prototype.__proto__.constructor === Object) // true
 ```
 
-如果我们将 Object 对象加入：
+其对应关系如图：
 
-![原型关系](../images/javascript/prototype-01-o.svg)
+![原型关系](../images/javascript/prototype-00-2.drawio.svg)
 
-### 1.2 原型的动态性
+### 1.3 原型的动态性
 
 由于从原型上搜索值的过程是动态的，即使实例在修改原型之前已经存在，任何时候对原型对象所做的修改也会在实例上反映出来。
 
@@ -102,7 +124,7 @@ friend.sayName()
 
 如图所示：
 
-![原型链](../images/javascript/prototype-chain.svg)
+![原型关系](../images/javascript/prototype-00-3.drawio.svg)
 
 原型链的本质：**原型链的实现依赖于实例指向原型的指针 `[[Prototype]]`**，图中紫色部分都可以通过 `__proto__` 属性进行链接，加粗部分原型链即为实例指向原型的指针！**正是因为该指针的存在，才能进行成员的向上搜索！**。
 
@@ -116,10 +138,12 @@ p._proto_.constructor = Person
 p._proto_.constructor = Person.prototype.constructor
 ```
 
-当然构造函数本身其实也是一个对象的实例，即 Function 对象，那么他们的关系如下所示：
-![原型链](../images/javascript/prototype-chain-f.svg)
+### 2.2 Function
 
-### 2.2 属性搜索原则
+当然构造函数本身其实也是一个对象的实例，即 Function 对象，那么他们的关系如下所示：
+![原型关系](../images/javascript/prototype-00-4.drawio.svg)
+
+### 2.3 属性搜索原则
 
 与普通构造函数一样， 类可以使用 instanceof 操作符检查构造函数原型是否存在于实例的原型链中：
 
@@ -159,7 +183,7 @@ delete person1.name
 console.log(person1.name) // "Nicholas"，来自原型
 ```
 
-### 2.3 Object 的原型
+### 2.4 Object 的原型
 
 首先看构造函数：
 
@@ -178,7 +202,7 @@ console.log(Object.prototype) // 一系列 Object 上的函数
 console.log(Object.prototype.prototype) // undefined
 ```
 
-### 2.4 没有原型的对象
+### 2.5 没有原型的对象
 
 没有原型的对象是存在的：
 
