更新electron架构图

--- a/11-客户端框架-Electron/01.1-Elecron简介.md
+++ b/11-客户端框架-Electron/01.1-Elecron简介.md
@@ -34,6 +34,12 @@ Electron 的劣势：
 
 Electron 也有一些竞争者，不乏理念上不同的开发方式，如 PWA，PWA 无需像 Electron 这样还需要安装软件安装包，而是利用浏览器直接就能缓存一个本地客户端。但是 PWA 在不同操作系统支持度不同，其推广方 Google 目前也并未投入过多资源。
 
+跨平台桌面端框架汇总：
+
+- tarui：Rust 语言开发的桌面端框架，UI 渲染交给了操作系统的 webview，可以减少 electron 自带 Chromium 引起的体积问题，但目前尚不成熟
+- QT：基于 C++，性能媲美原生，体积小，也有 pyqt 版
+- electron：基于 Chromium 和 node，使用 web 技术开发，开发速度快，但是打包体积大！
+
 ## 三 Electron 安装
 
 安装 Electron 需要确保电脑上已经安装 Node.js，最好是 8 版本以上
