--- a/附录-HTML与CSS/02.5-CSS基础-层叠性与继承性.md
+++ b/附录-HTML与CSS/02.5-CSS基础-层叠性与继承性.md
@@ -194,3 +194,91 @@ inherit 会将元素的属性值设置为与其父元素一致，即：用继承
 ### 3.4 属性连写
 
 属性连写时，如果一些属性被忽略掉了，则忽略掉的属性会被隐式地设置为初始值！！
+
+## 四 自定义属性
+
+### 4.1 使用自定义属性
+
+2015 年 CSS 推出的新标准：层叠变量的自定义属性（ Custom Properties for Cascading Variables），为 CSS 引进了变量的概念。
+
+贴士：CSS 内置的变量功能与 sass 等 CSS 预处理器有着本质不同，功能更加强大，可以理解为：自定义属性。
+
+定义一个自定义属性：
+
+```css
+:root {
+  --main-font: Helvetica, Arial, sans-serif;
+}
+
+p {
+  font-family: var(--main-font);
+}
+```
+
+这个代码清单定义了一个名叫--main-font 的变量。将其值设置为一些常见的 sans-serif 字体。变量名前面必须有两个连字符（ --），用来跟 CSS 属性区分，剩下的部分可以随意命名，不过变量必须在一个声明块内声明。这里使用了:root 选择器，因此该变量可以在整个网页使用。
+
+调用函数 var()就能使用该变量。如果 var()函数算出来的是一个非法值，对应的属性就会设置为其初始值。比如， 如果在 padding: var(--brand-color)中的变量算出来是一个颜色，它就是一个非法的内边距值。这种情况下，内边距会设置为 0。
+
+### 4.2 动态改变自定义属性
+
+自定义属性可以减少重复代码，但是其真正的意义在于自定义属性的声明能够层叠和继承：可以在多个选择器中定义相同的变量，这个变量在
+网页的不同地方有不同的值。
+
+例如，可以定义一个变量为黑色，然后在某个容器中重新将其定义为白色。那么基于该变量的任何样式，在容器外部会动态解析为黑色，在容器内部会动态解析为白色。
+
+```html
+<style>
+  :root {
+    --main-bg: #fff;
+    --main-color: #000;
+  }
+  .panel {
+    font-size: 1rem;
+    padding: 1em;
+    border: 1px solid #999;
+    border-radius: 0.5em;
+    background-color: var(--main-bg);
+    color: var(--main-color);
+  }
+  .panel > h2 {
+    margin-top: 0;
+    font-size: 0.8em;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .dark {
+    margin-top: 2em;
+    padding: 1em;
+    background-color: #999;
+    --main-bg: #333;
+    --main-color: #fff;
+  }
+</style>
+
+<div class="panel">
+  <h2>Single-origin</h2>
+  <div class="body">
+    We have built partnerships with small farms around the world to hand-select
+    beans at the peak of season. We then careful roast in small batches to
+    maximize their potential.
+  </div>
+</div>
+
+<aside class="dark">
+  <div class="panel">
+    <h2>Single-origin</h2>
+    <div class="body">
+      We have built partnerships with small farms around the world to
+      hand-select beans at the peak of season. We then careful roast in small
+      batches to maximize their potential.
+    </div>
+  </div>
+</aside>
+```
+
+使用 javascript 也可以改变自定义属性：
+
+```js
+element.style.setProperty('--main-bg', '#cdf')
+```
