--- a/附录-HTML与CSS/03.1-盒模型-盒模型分类.md
+++ b/附录-HTML与CSS/03.1-盒模型-盒模型分类.md
@@ -1,4 +1,4 @@
-# 03.1-盒模型-盒模型使用
+# 03.1-盒模型-盒模型分类
 
 ## 一 盒模型
 
@@ -141,7 +141,7 @@ padding: 10px 20px 30px 40px;   上，右，下，左
 - **子盒子在父盒子宽度范围内，父盒子的 padding 不会影响子盒子大小**。
 - 最大值、最小值可以限定盒模型的最大、最小伸缩度，其属性名为：`max-width`、`min-width`，同理 height 也有对应属性。
 
-## 3.2 盒模型的自适应特性
+### 3.2 盒模型的自适应特性
 
 如果我们要维持整个元素的大小，一旦元素盒子设置了内边距，那么就需要将内容部分作出相应的增减。即当一个块级元素设置了宽度后，就意味着其内容部分（content）的大小就是该宽度固定了，我们再额外设置 padding、margin、border 都不会影响其内容的大小，反而会将盒子变大。
 
@@ -186,86 +186,3 @@ input {
   box-sizing: border-box;
 }
 ```
-
-## 四 标准盒模型常见问题
-
-### 4.1 清除盒子的内外边距
-
-对元素而言，没编剧、边框、外边距都不是必须的，但是浏览器往往有自己自带的 margin、padding。为了通用，需要将浏览器自带的 margin 清除：
-
-```css
-* {
-  margin: 0;
-  padding: 0;
-}
-```
-
-### 4.2 外边距塌陷
-
-对于嵌套的盒子，子盒子设置了 `margin-top` 会存在外边距塌陷的情况，如下所示：
-
-```html
-<!--css-->
-<style>
-  .father {
-    width: 300px;
-    height: 300px;
-    background-color: lightcoral;
-  }
-  .son {
-    width: 100px;
-    height: 100px;
-    background-color: yellowgreen;
-    margin-top: 100px;
-  }
-</style>
-
-<!--html-->
-<div>
-  <div class="father">
-    <div class="son"></div>
-  </div>
-</div>
-```
-
-此时，虽然子盒子存在外边距，但是却没有变化，子元素的 `margin-top` 传递给父元素，反而是父盒子自己向下偏移了 100px。
-
-解决办法：
-
-- 1、可以使用 padding-top 来设置子元素的位置，但是需要处理子元素位置
-- 2、可以给父元素添加边框，即可解决外边距塌陷问题
-- 3、BFC 格式化上下文
-- 4、使用现代布局：弹性布局、网格布局，不会存在该问题。
-
-### 4.3 margin 叠加现象
-
-同级别的盒子，垂直方向的外边距会取其最大的值：
-
-```html
-<!--css-->
-<style>
-  .box1 {
-    width: 300px;
-    height: 300px;
-    background-color: lightcoral;
-    margin-bottom: 30px;
-  }
-  .box2 {
-    width: 100px;
-    height: 100px;
-    background-color: yellowgreen;
-    margin-top: 70px;
-  }
-</style>
-
-<!--html-->
-<div class="box1"></div>
-<div class="box2"></div>
-```
-
-示例中盒子 1 和盒子 2 的距离本应该是 100px，但是却取了其最大值：70px。
-
-外边距叠加解决方案：
-
-- 1、BFC 格式化上下文
-- 2、使用现代布局：弹性布局、网格布局，不会存在该问题
