--- a/附录-HTML与CSS/05.3-响应式-移动端布局方案.md
+++ b/附录-HTML与CSS/05.3-响应式-移动端布局方案.md
@@ -1,4 +1,4 @@
-# 05.2-移动 Web-移动端布局方案
+# 05.3-响应式-移动端布局方案
 
 ## 一 移动端开发方案
 
@@ -123,3 +123,76 @@
 ```
 
 贴士：推荐媒体查询写在底部，用于覆盖样式。
+
+## 二 移动布局中的常见问题
+
+### 2.1 表格过宽
+
+在移动设备的流式布局里，表格的问题特别多。如果表格的列太多，很容易超过屏幕宽度。如果可以的话，建议在移动设备上用别的方式组织数据。比如将每一行数据单独用一块区域展示，让每块区域顺序叠放，或者用更适合小屏的可视化图形或者图表展示。
+
+但是，有时候就是需要用表格。有一个办法是将表格强制显示为一个普通的块级元素，可以用 max-width 媒体查询限制在小屏下才改变表格元素的显示：
+
+```css
+table {
+  width: 100%;
+}
+
+@media (max-width: 30em) {
+  table,
+  thead,
+  tbody,
+  tr,
+  th,
+  td {
+    display: block; /* 让表格的所有元素都显示为块级 */
+  }
+  thead tr {
+    /* 将表头移到屏幕外，将其隐藏 */
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  tr {
+    /* 在表格数据的每一个集合之间加上间隔 */
+    margin-bottom: 1em;
+  }
+}
+```
+
+以上样式让每个单元格从上到下排列，并且在每个 `<tr>` 之间添加了外边距，但是这样会让`<thead>` 行不再跟下面的每一列对齐，因此要用绝对定位将头部移出视口。出于可访问性的缘故，我们没有用 display: none，这样屏幕阅读器能够读到表头。虽然不是完美的解决办法，但是当其他方式失效的时候，这就是最好的方式。
+
+### 2.2 响应式图片
+
+在响应式设计中，图片需要特别关注。不仅要让图片适应屏幕，还要考虑移动端用户的带宽限制。图片通常是网页上最大的资源。首先要保证图片充分压缩。在图片编辑器中选择“Save forWeb”选项能够极大地减小图片体积，或者用别的图片压缩工具压缩图片，比如 tinypng 网站。还要避免不必要的高分辨率图片，而是否必要则取决于视口大小。也没有必要为小屏幕提供大图，因为大图最终会被缩小。
+
+**不同视口大小使用不同的图片，解决 css 内引入的图片**：
+
+```css
+.hero {
+  padding: 2em 1em;
+  text-align: center;
+  background-image: url(coffee-beans-small.jpg);
+  background-size: 100%;
+  color: #fff;
+  text-shadow: 0.1em 0.1em 0.3em #000;
+}
+
+/* 给中等屏幕提供稍大的图 */
+@media (min-width: 35em) {
+  .hero {
+    padding: 5em 3em;
+    font-size: 1.2rem;
+    background-image: url(coffee-beans-medium.jpg);
+  }
+}
+
+/* 给大屏幕提供完整分辨率的图 */
+@media (min-width: 50em) {
+  .hero {
+    padding: 7em 6em;
+    background-image: url(coffee-beans.jpg);
+  }
+}
+```
+
+贴士：**使用 srcset 提供对应的图片解决 img 标签里的图片**。
