--- a/附录-HTML与CSS/05.4-响应式-rem适配.md
+++ b/附录-HTML与CSS/05.4-响应式-rem适配.md
@@ -1,61 +1,8 @@
-# 05.3-移动 Web-rem 适配
+# 05.4-响应式-rem 适配
 
-## 一 rem 的使用
+## 一 rem 布局的方案
 
-在不同的设备上，如果一个图形大小一样，页面就会出现拉伸效果，比例也会出现问题，解决办法其实是在大设备上等比放大、在小设备上等比缩小，PX 由于是绝对单位，即是一个实际的像素大小，要实现这种等比变化，就需要使用 JS 控制，比较麻烦。而 rem（root em）、em 都是相对大小，就可以实现这个要求：
-
-- em：相对于当前元素的字体大小，比如当前元素字体为 10px，则当前元素的其他属性设置为 2em，其绝对值是 20px。当前元素没有设定字体大小，则相对于父级的字体大小。
-- rem：相对于 html 根元素字体大小（默认为 16px）。比如 html 设置了 `font-size=10px`，若某个非根元素设置 `width:2rem;` 换算为 px 就是 20px。
-
-em 的最大问题是在多级列表嵌套时，字体会被缩小：
-
-```html
-<style>
-  body {
-    font-size: 16px;
-  }
-  ul {
-    font-size: 0.8em;
-  }
-</style>
-
-<body>
-  <ul><li><ul><li></li><ul></li><ul>
-</body>
-```
-
-当使用 rem (root em)作为单位时，只要 html 元素中的字体大小发生改变，那么整体的布局就会相应发生改变，其适配的核心方案是随着屏幕的变化，字体发生相应变化，界面进行等比例缩放。从这里看出，与 em 相比，rem 降低了复杂性，而且结合了 px 和 em 的优点，既保留了相对单位的优势，又简单易用。
-
-当然 rem 也不是万金油，一般会用 rem 设置字号，用 px 设置边框，用 em 设置其他大部分属性，尤其是内边距、外边距和圆角（不过我有时用百分比设置容器宽度）。这样字号是可预测的，同时还能在其他因素改变元素字号时，借助 em 缩放内外边距。用 px 定义边框也很好用，尤其是想要一个好看又精致的线时。这些是我在设置各种属性时常用的单位，但它们仅仅是工具，在某些情况下，用其他工具会更好。
-
-贴士：拿不准的时候，用 rem 设置字号，用 px 设置边框，用 em 设置其他大部分属性。
-
-rem 可以用来解决布局中一些大小问题，如：
-
-- 传统布局、flex 布局中，文字都不能随着屏幕大小变化而变化
-- 流式布局和 flex 布局主要针对宽度进行布局，高度不能很好的定义
-- 在屏幕发生变化时，元素的宽高不能很好的进行等比例缩放
-
-这里就涉及 html 标签的 font-size 大小动态设置问题：
-
-```txt
-通常会将屏幕划分为 15 等份，根据需求也可以设置为 10 等份，20 等份，用页面元素大小除以不同的 html 字体大小，会发现其比例相同：
-
-在设计稿为 750px 时，其 html 字体的大小为：750/15=50px
-在设备中为 320px 时，其 html 字体的大小为：320/15=21.33px
-
-现在假设有一个 100*100px 的页面元素：
-在 750 屏幕下，html 字体大小为 50.00px，转换为 rem：100/50.00，即：2rem*2rem，宽高比例是 1 比 1
-在 320 屏幕下，rem 值上面已经写好是 2*2，但是其字体是：21.33px，实际像素 2rem 即：42.66px * 42.66px，宽高比例没变！
-```
-
-由上得出：**`rem 值` = `页面元素 px` / `html 的 font-size`**。
-
-贴士：如果不设置字体大小，1rem=16px
-
-## 二 rem 布局的方案
-
-### 2.1 rem 实现方式一：js 控制
+### 1.1 rem 实现方式一：js 控制
 
 现在的核心问题就是根据屏幕自动计算 rem 的值，下面的脚本可以实现自动改变字体大小。有了该脚本，只需要将设计稿（750px）量出的像素值除以 100 即可得到 rem 的值。这里要注意，html 根元素的字体大小改变会引起一个 bug：图片与文件间距会出现变化，可以为 body 设置固定大小即可：
 
@@ -106,7 +53,7 @@ rem 可以用来解决布局中一些大小问题，如：
 </body>
 ```
 
-### 2.2 rem 适配方式二：媒体查询动态计算 font-size
+### 1.2 rem 适配方式二：媒体查询动态计算 font-size
 
 不同屏幕设备上，手动动态设置 html 标签 font-size 大小步骤：
 
@@ -165,7 +112,7 @@ html {
 <link rel="stylesheet" href="./big.css" media="screen and (min-width:640px)" />
 ```
 
-### 2.3 rem 实现方式三：vw 动态计算 font-size
+### 1.3 rem 实现方式三：vw 动态计算 font-size
 
 vw 方式 js 控制的方式更加简单，性能更高，无需对字体大小进行控制，但是只兼容 iOS8、Android4.4 以上系统。
 
