修订js基础语法与对象操作章节

--- a/01-JavaScript基础语法/01.1-JavaScript简介.md
+++ b/01-JavaScript基础语法/01.1-JavaScript简介.md
@@ -28,6 +28,16 @@ ECMAScript 现在的流行版本是：ES5、ES6，其主要版本有：
 - ECMAScript6：诞生于 2015 年，也称为 ES2015，是 js 划时代意义的版本。添加了开发大型项目所需要的功能，JS 终于不再是一门`玩具语言`。
 - ES2016：诞生于 2016 年，即 ES7，后续版本均以年为名称，如 ES2017、ES2018。ES2016 最出色的地方是引入了`async await`异步解决方案。
 
+ECMAScript 提案批准流程：
+
+```txt
+Stage 0： Strawman 展示阶段
+Stage 1： Proposal 征求意见阶段
+Stage 2： Draft 草案阶段（进入该阶段，则基本会在以后的正式标准出现）
+Stage 3： Candidate 候选阶段
+Stage 4： Finished 定案阶段
+```
+
 ### 1.2 JavaScript 的 API 组成
 
 ECMAScript 是 JavaScript 的语法核心，但是仅仅有语法，没有一些具体的 API 帮助，JS 也只是一个玩具。在浏览器环境中，浏览器为 JavaScript 提供了两大对象 DOM、BOM，让 JavaScript 能够游刃有余的操作浏览器相关特性。
