--- a/01-JavaScript基础语法/03.1-数据类型-数据类型的分类.md
+++ b/01-JavaScript基础语法/03.1-数据类型-数据类型的分类.md
@@ -26,7 +26,7 @@
 
 ### 1.2 JavaScipt 中的基本类型和引用类型
 
-JavaScript 包含 7 种数据类型（6 个基础类型，1 个复杂类型 Object）：
+JavaScript 包含 8 种数据类型（7 个基础类型，1 个复杂类型 Object）：
 
 **基本类型**：
 
@@ -36,16 +36,34 @@ JavaScript 包含 7 种数据类型（6 个基础类型，1 个复杂类型 Obje
 - Undefined 未定义类型：`var a = undefined;`表示该 a 的值未定义
 - Null 类型：null 较为特殊，是个空值，表示一个空对象的引用
 - Symbol 类型：ES6 中新增数据类型
+- Bigint 类型：新提案新增了 'bigint' 类型，表示更大范围的整数
 
 **引用类型**：
 
 - Object 对象类型：表示值为对象或者 null(非 function)
 
-使用 typeof 关键字可以初步识别数据的类型，但是 `typeof null === 'object'`，这是因为 JS 认为 null 是一个空对象的引用。
-
-注意：严格意义上来说，函数也是一种对象，并不是一种数据类型，但是函数拥有自己的属性，使用 typeof 可以区分，获得的结果为 `function`。
-
 基本类型和引用类型的数据类型的值分别对应了原始值（primitive value）和引用值（reference value），其中引用值是由多个值构成的对象。在执行赋值操作时，JS 引擎必须确定值是原始值还是引用值。因为：引用值是保存在内存中的对象，JS 不允许直接访问内存，在操作对象时，实际操作的是该对象的引用，而不是对象本身！
+
+### 1.3 typeof 获取数据类型
+
+使用 typeof 关键字可以初步识别数据的类型：
+
+```js
+console.log(typeof 12) // number
+console.log(typeof '12') // string
+console.log(typeof 12n) // bigint
+console.log(typeof false) // boolean
+console.log(typeof undefined) // undefined
+console.log(typeof null) // object   特殊情况：JS 认为 null 是一个空对象的引用
+console.log(typeof {}) // object
+```
+
+注意：严格意义上来说，函数也是一种对象，并不是一种数据类型，但是函数拥有自己的属性，使用 typeof 可以区分，获得的结果为 `function`。此外，数组也是一种对象：
+
+```js
+console.log(typeof function () {}) // function
+console.log(typeof []) // object
+```
 
 ## 二 基本类型的基础使用
 
@@ -146,7 +164,34 @@ console.log(isNaN(true)) //false（可以被转换成数值 1）
 console.log(Nan == Nan) //false
 ```
 
-### 2.5 String 类型
+### 2.5 Bigint 类型
+
+JavaScript 所有数字都会保存为 64 位浮点数，这决定了整数的精确程度只能到 53 个二进制位，大于这个范围的整数是无法精确表示的。Bigint 类型主要用于解决该问题，其值为普通数值后面多加一个 `n`：
+
+```js
+1n + 2n // 3n
+Bigint(3) // 3n
+```
+
+在数学运算方面 ， Bigint 类型的＋、 － 、\* 和＊＊这四个二元运算符与 Number 类型的行为一致。除法运算／会舍去小数部分，返回一个整数：
+
+```js
+9n / 5n // 1n
+```
+
+注意：Bigint 不能与 Number 类型混合运算，相等运算符（＝＝）会改变数据类型，也是不允许混合使用的：
+
+```js
+0n === 0 // false
+0n == 0 // true
+```
+
+几乎所有的 Number 类型可以使用的运算符都可以用在 Bigint 中，但有 2 个例外：
+
+- 不带符号的右移位运算：>>>。因为该运算要求最高位补 0，但是 Bigint 没有最高位，导致该运算符没有意义
+- 一元求正运算：+。因为不能将 Bigint 转换为 Number
+
+### 2.6 String 类型
 
 String 在 JavaSctipt 中是基本类型！在很多别的语言中，String 是引用类型！
 
@@ -219,9 +264,13 @@ console.log(String(value3)) // "null"
 console.log(String(value4)) // "undefined"
 ```
 
-### 2.6 Symbol 类型
+### 2.7 Symbol 类型
 
-Symbol 类型是 ES6 新增数据类型，在 12 节中专门讲解。
+Symbol 类型是 ES6 新增数据类型，在 11 节中专门讲解。
+
+### 2.8 Object 类型
+
+Object 类型涉及面向对象知识，在面向对象章节中专门讲解。
 
 ## 三 引用类型
 
