--- a/01-JavaScript基础语法/04.1-运算符.md
+++ b/01-JavaScript基础语法/04.1-运算符.md
@@ -10,6 +10,7 @@
   - `delete`、`typeof` `void` 等也被归纳为运算符
 - 二元运算符：即操作两个值的运算符
   - 加、减、乘、除、模
+  - ES6 新增指数运算符：`2 ** 3` 结果为 8
 - 三元运算符：`表达式？值 1：值 2`，（表达式成立取值 1，不成立取值 2）
 
 需要注意的是，使用运算符可能出现数据类型的转换，如类似自增自减这样的运算符会遵循下列规范：
@@ -242,7 +243,7 @@ console.log(0.1 + 0.2 == 0.3) // false
 console.log(0.1 + 0.3 == 0.4) // true
 ```
 
-上述并不是 JS 语言的特例，几乎所有现代编程语言都有上述特性，因为他们都使用了 IEEE-754 浮点数表示法。
+上述并不是 JS 语言的特例，几乎所有现代编程语言都有上述特性，因为他们都使用了 IEEE-754 浮点数表示法：0.1 与 0.2 在转换为二进制时即已经出现了精度丢失。
 
 ### 4.3 直接量表达式
 
