--- a/01-JavaScript基础语法/07.2-函数-递归与尾调用优化.md
+++ b/01-JavaScript基础语法/07.2-函数-递归与尾调用优化.md
@@ -90,7 +90,7 @@ function fib(n) {
 
 ### 2.1 尾调用的概念
 
-尾调用即：外部函数的返回值是一个内部函数的返回值：
+尾调用即：外部函数的返回值是一个内部函数的调用：
 
 ```js
 function outerFunction() {
@@ -98,7 +98,28 @@ function outerFunction() {
 }
 ```
 
+下列情况都不属于尾调用：
+
+```js
+function outerFunction() {
+  innerFunction()
+}
+
+function outerFunction() {
+  const res = innerFunction()
+  return res
+}
+
+function outerFunction() {
+  return innerFunction() + '1'
+}
+```
+
 ### 2.2 ES6 中尾调用的优化
+
+尾调用的特殊之处在于特殊的调用位置，函数调用在内存中会形成一个调用记录，即 `调用帧(call frame)`，用来保存位置和内部变量信息。如果函数 A 内部调用了函数 B，那么在 A 的调用帧上方还会形成一个 B 的调用帧，等 B 运行结束后，将结果返回到 A，B 的调用帧才会消失。如果函数 B 内部还调用函数 C，则还会生成 C 的调用帧，依次类推。所有的调用帧就会形成一个 `调用栈(call stack)`。
+
+尾调用由于是函数的最后一步操作，所以不需要保留外层函数的调用帧，因为调用位置、内部变量等信息不回再用到了，直接用内层函数的调用帧取代外层函数的即可，这便是 ES6 的尾调用优化，可以节省内存！
 
 在 ES6 优化之前，执行这个例子会在内存中发生如下操作：
 
@@ -113,11 +134,10 @@ function outerFunction() {
 
 - (1) 执行到 outerFunction 函数体，第一个栈帧被推到栈上。
 - (2) 执行 outerFunction 函数体，到达 return 语句。计算返回值必须先计算 innerFunction。
-- (3) 引擎发现把第一个栈帧弹出栈外也没问题，因为 innerFunction 的返回值也是 outerFunction 的返回值。
-- (4) 弹出 outerFunction 的栈帧。
-- (5) 执行到 innerFunction 函数体，栈帧被推到栈上。
-- (6) 执行 innerFunction 函数体，计算其返回值。
-- (7) 将 innerFunction 的栈帧弹出栈外。
+- (3) 弹出 outerFunction 的栈帧：引擎发现把第一个栈帧弹出栈外也没问题，因为 innerFunction 的返回值也是 outerFunction 的返回值
+- (4) 执行到 innerFunction 函数体，栈帧被推到栈上。
+- (5) 执行 innerFunction 函数体，计算其返回值。
+- (6) 将 innerFunction 的栈帧弹出栈外。
 
 很明显，第一种情况下每多调用一次嵌套函数，就会多增加一个栈帧。而第二种情况下无论调用多少次嵌套函数，都只有一个栈帧。这就是 ES6 尾调用优化的关键：如果函数的逻辑允许基于尾调用将其销毁，则引擎就会那么做。
 
@@ -125,7 +145,7 @@ function outerFunction() {
 
 尾调用优化的条件就是确定外部栈帧真的没有必要存在了：
 
-- 代码在严格模式下执行；
+- 代码在严格模式下执行：因为正常模式下函数内部有 2 个变量 arguments、caller，使用尾调用优化则会因为调用栈改写让这 2 个变量出现错误
 - 外部函数的返回值是对尾调用函数的调用；
 - 尾调用函数返回后不需要执行额外的逻辑；
 - 尾调用函数不是引用外部函数作用域中自由变量的闭包。
