--- a/01-JavaScript基础语法/08.2-作用域-变量提升.md
+++ b/01-JavaScript基础语法/08.2-作用域-变量提升.md
@@ -214,7 +214,7 @@ console.log(j) //报错：j is not defined
 
 ### 2.2 顶级对象绑定
 
-在浏览器环境中。var 声明的变量会被绑定在 window 顶级对象中，如果定义的变量是一些 dom 中的常用名，则会引起错误，而 let/const 则不会出现这样的问题：
+在浏览器环境中，var 声明的变量会被绑定在 window 顶级对象中，如果定义的变量是一些 dom 中的常用名，则会引起错误，而 let/const 则不会出现这样的问题：
 
 ```js
 var screenLeft = 100
@@ -278,3 +278,11 @@ for (let i = 0; i < 0; i++) {
   }
 }
 ```
+
+## 三 var 与 let 区别总结
+
+- var 声明的变量，其作⽤域为当前函数、模块或全局；let 声明的变量，其作⽤域总是在当前的代码块，例如语句块
+- 在同⼀个代码块中，可以⽤ var 来多次声明变量名，这在语法分析中与声明⼀次没有区别；⽽⽤ let 却只能声明⼀次，覆盖⼀个已经声明的 let 变量（或者⽤ let 去覆盖⼀个已声明过的标识符）会导致语法错误。
+- ⽤⼾代码可以在声明语句之前使⽤所声明的 var 变量，这时该变量的值是 undefined；⽽ let 声明的变量必须先声明后使⽤，声明语句之前的代码引⽤了 let 变量会触发异常，这也会导致 typeof 成为⼀个不安全的运算。
+
+最后：当 let 声明发⽣在全局代码块时，它与 var 声明存在细微的差别。这是因为按照早期 JavaScript 的约定，在全局代码块使⽤ var 声明（和具名函数声明语法）时，相当于在全局对象 global 上声明了⼀个属性，进⽽使所有代码都能将这些声明作为全局变量来访问。⽽ let 声明与其他⼀些较新的语法元素遵从“块级作⽤域”规则，因此即使出现在全局代码块中，它们也只是声明为“全局作⽤域”中的标识符，⽽不作为对象 global 上的属性。
