--- a/01-JavaScript基础语法/09.2-面向对象-对象的创建方式.md
+++ b/01-JavaScript基础语法/09.2-面向对象-对象的创建方式.md
@@ -31,6 +31,35 @@ let obj = {
 }
 ```
 
+对于字面量的成员来说，可以设置 get、set 进行修饰：
+
+```js
+let obj = {
+  _name: 'tom',
+  set name(name) {
+    this._name = name
+  },
+  get name() {
+    return this._name
+  },
+  age: 13,
+  run() {
+    console.log(this.name + '唱歌...')
+  },
+}
+
+console.log(obj.name) // tom
+obj.name = '张三'
+console.log(obj.name) // 张三
+```
+
+在 ES6 中，如果对象的属性名与变量名一致，则可以简写：
+
+```js
+const foo = 'bar'
+const obj = { foo } // 等同于 {foo: foo}
+```
+
 ## 二 使用 Object 基类创建对象
 
 ```js
@@ -97,6 +126,8 @@ function Man(name, age) {
   }
 }
 
+// let p = new Person //
+
 let person1 = new Person('Nicholas', 29)
 let person2 = new Person('Greg', 27)
 person1.sayName() // Nicholas
@@ -105,7 +136,7 @@ person2.sayName() // Greg
 
 贴士：构造函数不一定要写成函数声明的形式，赋值的函数表达式也可以 `const Man = ()=>{}`。在实例化时，如果不想传参数，那么构造函数后面的括号可加可不加。
 
-构造函数与普通函数没有本质上的区别，其调用方式采用 new。其实只要是使用 new 方式调用的函数即构造函数！
+构造函数与普通函数没有本质上的区别，区别只是原型 prototype 属性是否具有意义。构造函数调用方式采用 new，只要是使用 new 方式调用的函数即构造函数！
 
 ### 3.2 使用原型配合构造函数创建对象
 
