--- a/01-JavaScript基础语法/09.4-面向对象-原型与原型链.md
+++ b/01-JavaScript基础语法/09.4-面向对象-原型与原型链.md
@@ -4,7 +4,7 @@
 
 ### 1.1 构造函数的原型对象
 
-一个函数往往包含下列 2 个属性：
+一个对象往往包含下列 2 个属性：
 
 - `prototype`：函数原型对象，也称之为 **显式原型对象**。
 - `__proto__`：向上指向生成该函数的构造函数，为了区分，也称之为 **隐式原型对象**。该属性不是标准属性，但是已经被各大浏览器接受并实现。
