--- a/01-JavaScript基础语法/09.5-面向对象-三大特性-封装.md
+++ b/01-JavaScript基础语法/09.5-面向对象-三大特性-封装.md
@@ -1,4 +1,4 @@
-# 09.5-面向对象-三大特性之封装
+# 09.5-面向对象-三大特性-封装
 
 ## 一 封装概念
 
@@ -67,7 +67,50 @@ const obj = {
 
 ECMA-262 使用了一些内部特性来描述对象的成员特征，比如：可枚举型、是否可修改等，这些特性是由 JavaScript 引擎所规范定义的，开发者不能直接在 JavaScript 中访问。使用 `Object.defineProperty()，getOwnPropertyDescriptor` 分别可以设置、获取这些特性。
 
-具体细节参见 02-JavaScript 语法进阶中的 02.2-基类 Object-限制对象成员章节。
+```js
+let obj = {
+  _name: 'tom',
+  set name(name) {
+    this._name = name
+  },
+  get name() {
+    return this._name
+  },
+  age: 13,
+  run() {
+    console.log(this.name + '唱歌...')
+  },
+}
+
+console.log(obj.name) // tom
+obj.name = '张三'
+console.log(obj.name) // 张三
+
+Object.defineProperty(obj, 'name', {
+  set: function (name) {
+    this._name = name + '~'
+  },
+  get: function () {
+    return this._name + '-'
+  },
+})
+
+console.log(obj.name) // 张三 -
+obj.name = '张三'
+console.log(obj.name) // 张三 ~-
+```
+
+贴士：还可以使用下面的方式：
+
+```js
+// 方式一
+obj.__defineGetter__('name', function () {
+  return this._name + '-'
+})
+obj.__defineSetter__('name', function (name) {
+  this._name = name + '~'
+})
+```
 
 ## 三 私有变量
 
@@ -282,3 +325,61 @@ let application = (function () {
 ### 3.5 私有语法的官方支持
 
 在最新的 JS 提案中，可以使用 `#` 标识变量为私有。
+
+## 四 可计算属性
+
+如果想使用变量的值作为属性，那么必须先声明对象，然后使用中括号语法来添加属性。换句话说，不能在对象字面量中直接动态命名属性：
+
+```js
+const nameKey = 'name'
+const ageKey = 'age'
+const jobKey = 'job'
+let person = {}
+person[nameKey] = 'Matt'
+person[ageKey] = 27
+person[jobKey] = 'Software engineer'
+console.log(person) // { name: 'Matt', age: 27, job: 'Software engineer' }
+```
+
+有了可计算属性，就可以在对象字面量中完成动态属性赋值。中括号包围的对象属性键告诉运行时将其作为 JavaScript 表达式而不是字符串来求值：
+
+```js
+const nameKey = 'name'
+const ageKey = 'age'
+const jobKey = 'job'
+let person = {
+  [nameKey]: 'Matt',
+  [ageKey]: 27,
+  [jobKey]: 'Software engineer',
+}
+```
+
+因为被当作 JavaScript 表达式求值，所以可计算属性本身可以是复杂的表达式，在实例化时再求值：
+
+```js
+const nameKey = 'name'
+const ageKey = 'age'
+const jobKey = 'job'
+let uniqueToken = 0
+function getUniqueKey(key) {
+  return `${key}_${uniqueToken++}`
+}
+let person = {
+  [getUniqueKey(nameKey)]: 'Matt',
+  [getUniqueKey(ageKey)]: 27,
+  [getUniqueKey(jobKey)]: 'Software engineer',
+}
+console.log(person) // { name_0: 'Matt', age_1: 27, job_2: 'Software engineer' }
+```
+
+简写方法名与可计算属性键相互兼容：
+
+```js
+const methodKey = 'sayName'
+let person = {
+  [methodKey](name) {
+    console.log(`My name is ${name}`)
+  },
+}
+person.sayName('Matt') // My name is Matt
+```
