--- a/01-JavaScript基础语法/09.6-面向对象-三大特性-继承.md
+++ b/01-JavaScript基础语法/09.6-面向对象-三大特性-继承.md
@@ -1,4 +1,4 @@
-# 09.6-面向对象-三大特性之继承
+# 09.6-面向对象-三大特性-继承
 
 ## 一 继承概念
 
@@ -9,7 +9,7 @@
 - 接口继承：只继承方法签名，继承者自己来实现具体的方法。
 - 实现继承：直接继承父类的方法
 
-JS 的函数没有签名，无法实现面向接口编程，JS 的继承主要依赖于原型链实现。
+JS 的函数没有签名，无法实现面向接口编程，JS 的继承主要依赖于原型链实现，本质是对原型的复制。
 
 ## 二 基于原型链的继承
 
