--- a/02-JavaScript语法进阶/01.3-语法更迭-ES6的改进.md
+++ b/02-JavaScript语法进阶/01.3-语法更迭-ES6的改进.md
@@ -85,14 +85,14 @@ getName.call(other) // Jerry
 注意：箭头函数中没有 arguments 对象。
 ES6 提供了许多写法上的改进，开发体验获得了极大提升！
 
-### 三 字符串模板
+## 三 字符串模板
 
 ```js
 let json = { name: 'lisi', age: '18' }
 console.log(`我是：${json.name}`)
 ```
 
-### 四 解构赋值
+## 四 解构赋值
 
 ```js
 const tom = {
@@ -187,3 +187,28 @@ function fn(num, ...args) {
 
 fn(1, 'a', { id: 23 }) // [ 'a', { id: 23 } ]
 ```
+
+## 七 NULL 传导运算符 ?
+
+在实际开发中，经常遇到需要判断对象是否含有某个属性的判断：
+
+```js
+if (message && message.body && message.body.user && message.body.user.name) {
+}
+```
+
+现在新的提案中可以使用 Null 传导运算符 （null propagation operator） `?` ：
+
+```js
+if (message?.body?.user?.name) {
+}
+```
+
+上面的代码有 3 个？．运算符，只要其中一个返回 null 或 undefined，就不再继续运算，而是返回 undefined 。
+
+Null 传导运算符有 4 种用法：
+
+- `obj?.prop`：读取对象属性
+- `obj?.[expr]`：同上
+- `func?.(...args)`：函数或对象方法的调用
+- `new C?.(...args)` ：构造函数的调用
