--- a/02-JavaScript语法进阶/03.1-对象操作-基类Object.md
+++ b/02-JavaScript语法进阶/03.1-对象操作-基类Object.md
@@ -1,4 +1,4 @@
-# 02.1-基类 Object-基本使用
+# 03.1-基类 Object-基本使用
 
 ## 一 Object 类型
 
@@ -47,7 +47,7 @@ let propertyName = 'name'
 console.log(obj[propertyName]) // "zs"
 ```
 
-## 二 Object 类常见使用场景
+## 二 Object 类的基础使用场景
 
 ### 2.1 Object.keys() 获取对象成员
 
@@ -138,3 +138,74 @@ let obj = { x: undefined } // 对象属性被显式赋值了 undefined
 console.log(obj.x !== undefined) // false
 console.log('x' in obj) // true
 ```
+
+### 2.3 Object.setPrototypeOf()设置原型
+
+一般来说我们不推荐使用 `__proto__` 属性来操作原型，ES6 推荐使用 `Object.setPrototypeOf()` 设置对象的 prototype 对象，发布会参数对象本身：
+
+```js
+const obj = Object.setPrototypeOf({}, null)
+// 上述方法等同于
+// function(obj, proto){
+//     obj.__proto__ = proto
+//     return obj
+// }
+```
+
+示例：
+
+```js
+let obj = { x: 10 }
+let proto = {}
+Object.setPrototypeOf(obj, proto)
+
+proto.y = 20
+proto.z = 40
+console.log(obj.x, obj.y, obj.z) // 10 20 40
+```
+
+如果第一个参数不是对象，则会自动转为对象。但是由于返回的还是第一个参数，所以这个操作不会产生任何效果：
+
+```js
+Object . setPrototypeOf(1, {}) === 1 / /true
+Object.setPrototypeOf ( 'foo' ,{})=== 'foo' // true
+Object.setPrototypeOf(true , {}) ===true // true
+```
+
+由于 undefined 和 null 无法转为对象，所以如果第一个参数是 undefined 或 null 就会报错：
+
+```js
+Object.setPrototypeOf(undefined, {}) // TypeError : Object.setPrototypeOf called on null o r undefined
+Object.setPrototypeOf(null, {}) // TypeError: Object.setPrototypeOf called on null or undefined
+```
+
+### 2.4 Object.getPrototypeOf()
+
+该方法与 setPrototypeOf 方法配套，用于读取一个对象的 prototype 对象：
+
+```js
+let p = new Person()
+console.log(Object.getPrototypeOf(p) === Person.prototype) // true
+```
+
+如果参数不是对象，则会被自动转为对象：
+
+```js
+// 等同于 Object .getPrototypeOf(Number(1))
+Object.getPrototypeOf(1)
+// Number { [[PrimitiveValue]] : 0)
+
+// 等同于 Object.getPrototypeOf(String( 'foo' ））
+Object.getPrototypeOf('foo')
+// String {length : 0 , [[Primitivevalue]] : "" }
+
+// 等同于 Object .getPrototypeOf(Boolean(true ))
+Object.getPrototypeOf(true)
+// Boolean { [[PrimitiveValue]] : false}
+
+Object.getPrototypeOf(1) === Number.prototype // true
+Object.getPrototypeOf('foo') === String.prototype // true
+Object.getPrototypeOf(true) === Boolean.prototype // true
+```
+
+同样的，如果参数是 undefined 或 null ，它们无法转为对象，所以会报错。
