--- a/02-JavaScript语法进阶/03.3-对象操作-限制对象成员.md
+++ b/02-JavaScript语法进阶/03.3-对象操作-限制对象成员.md
@@ -1,4 +1,4 @@
-# 02.2-基类 Object-限制对象成员
+# 03.3-对象操作-限制对象成员
 
 ## 一 对象成员的特征
 
@@ -13,7 +13,7 @@
 数据属性有 4 个特性描述其行为：
 
 - `[[Configurable]]`：默认值为 true，表示特性是否可以修改，包括属性是否可以 delete 删除并重新定义，是否可以修改为访问器属性
-- `[[Enumerable]]`：默认值为 true，表示是否可以枚举（即是否支持 for in 循环）
+- `[[Enumerable]]`：默认值为 true，表示是否可以枚举（即属性是否支持 for in 循环、Object.keys、JSON.stringify()）
 - `[[Writable]]`：默认值为 true，表示属性的值是否可以被修改
 - `[[Value]]`：默认值为 undefined，表示属性实际的值，即读取和写入属性值的位置
 
