--- a/01-JavaScript基础语法/02.1-标识符.md
+++ b/01-JavaScript基础语法/02.1-标识符.md
@@ -104,7 +104,7 @@ var num = 100 // 不会报错，而 let/const 这里报错
 
 ### 1.3 var/let/const 在作用域中的区别
 
-作用域涉及到函数，请查阅函数章节：09.3-函数-作用域
+作用域涉及到函数，请查阅本章：08 节 作用域。
 
 ## 二 声明风格推荐
 
