--- a/02-JavaScript语法进阶/03.7-对象操作-对象的解构.md
+++ b/02-JavaScript语法进阶/03.7-对象操作-对象的解构.md
@@ -1,102 +1,8 @@
-# 03.4-对象操作-对象的使用细节优化
+# 03.7-对象操作-对象的解构
 
-## 一 对象成员的简写
+## 一 对象解构
 
-对象的变量和变量名一致时简写：
-
-```js
-// 属性值简写
-let name = 'Matt'
-let person = {
-  name,
-}
-console.log(person) // { name: 'Matt' }
-
-// 返回属性值简写
-function makePerson(name) {
-  return {
-    name,
-  }
-}
-
-// 简写方法名对获取函数和设置函数也是适用的：
-let person = {
-  name_: '',
-  get name() {
-    return this.name_
-  },
-  set name(name) {
-    this.name_ = name
-  },
-  sayName() {
-    console.log(`My name is ${this.name_}`)
-  },
-}
-person.name = 'Matt'
-person.sayName() // My name is Matt
-```
-
-## 二 可计算属性
-
-如果想使用变量的值作为属性，那么必须先声明对象，然后使用中括号语法来添加属性。换句话说，不能在对象字面量中直接动态命名属性：
-
-```js
-const nameKey = 'name'
-const ageKey = 'age'
-const jobKey = 'job'
-let person = {}
-person[nameKey] = 'Matt'
-person[ageKey] = 27
-person[jobKey] = 'Software engineer'
-console.log(person) // { name: 'Matt', age: 27, job: 'Software engineer' }
-```
-
-有了可计算属性，就可以在对象字面量中完成动态属性赋值。中括号包围的对象属性键告诉运行时将其作为 JavaScript 表达式而不是字符串来求值：
-
-```js
-const nameKey = 'name'
-const ageKey = 'age'
-const jobKey = 'job'
-let person = {
-  [nameKey]: 'Matt',
-  [ageKey]: 27,
-  [jobKey]: 'Software engineer',
-}
-```
-
-因为被当作 JavaScript 表达式求值，所以可计算属性本身可以是复杂的表达式，在实例化时再求值：
-
-```js
-const nameKey = 'name'
-const ageKey = 'age'
-const jobKey = 'job'
-let uniqueToken = 0
-function getUniqueKey(key) {
-  return `${key}_${uniqueToken++}`
-}
-let person = {
-  [getUniqueKey(nameKey)]: 'Matt',
-  [getUniqueKey(ageKey)]: 27,
-  [getUniqueKey(jobKey)]: 'Software engineer',
-}
-console.log(person) // { name_0: 'Matt', age_1: 27, job_2: 'Software engineer' }
-```
-
-简写方法名与可计算属性键相互兼容：
-
-```js
-const methodKey = 'sayName'
-let person = {
-  [methodKey](name) {
-    console.log(`My name is ${name}`)
-  },
-}
-person.sayName('Matt') // My name is Matt
-```
-
-## 三 对象解构
-
-### 3.1 解构赋值的基本使用
+## 一 解构赋值的基本使用
 
 ECMAScript 6 新增了对象解构语法，可以在一条语句中使用嵌套数据实现一个或多个赋值操作，即：使用与对象匹配的结构来实现对象属性赋值。如下所示：
 
@@ -151,7 +57,9 @@ let person = {
 console.log(personName, personAge) // Matt, 27
 ```
 
-### 3.2 嵌套解构
+## 二 嵌套解构与部分解构
+
+### 2.1 嵌套解构
 
 解构对于引用嵌套的属性或赋值目标没有限制。为此，可以通过解构来复制对象属性：
 
@@ -214,7 +122,7 @@ let personCopy = {}
 // TypeError: Cannot set property 'title' of undefined
 ```
 
-### 3.3 不分解构
+### 2.2 部分解构
 
 涉及多个属性的解构赋值是一个输出无关的顺序化操作。如果一个解构表达式涉及多个赋值，开始的赋值成功而后面的赋值出错，则整个解构赋值只会完成一部分：
 
@@ -236,7 +144,7 @@ try {
 console.log(personName, personBar, personAge) // Matt, undefined, undefined
 ```
 
-### 3.4 参数上下文匹配
+## 三 参数上下文匹配
 
 在函数参数列表中也可以进行解构赋值。对参数的解构赋值不会影响 arguments 对象，但可以在函数签名中声明在函数体内使用局部变量：
 
