进阶部分文档修正

--- a/02-JavaScript语法进阶/04.2-容器对象-Map与WeakMap.md
+++ b/02-JavaScript语法进阶/04.2-容器对象-Map与WeakMap.md
@@ -261,7 +261,7 @@ const wm2 = new WeakMap([
 
 ### 3.2 WeakMap 的弱引用
 
-弱引用意味着 **key 不属于正式引用**，不会阻止垃圾回收，如下所示：
+WeakMap 中的对象都是弱引用，不会阻止垃圾回收，即垃圾回收机制不考虑 WeakMap 对该对象的引用，一旦其他对象不引用该对象，则会回收，不考虑对象是否还在 WeakMap 中。如下所示：
 
 ```js
 const wm = new WeakMap()
@@ -285,6 +285,8 @@ function removeReference() {
 
 removeReference()
 ```
+
+只要外部的引用消失， WeakMap 内部的引用就会自动被垃圾回收清除。由此可见，有了 WeakMap 的帮助，解决内存泄漏就会简单很多。
 
 ### 3.3 不可迭代键
 
