--- a/02-JavaScript语法进阶/04.3-容器对象-Set与WeakSet.md
+++ b/02-JavaScript语法进阶/04.3-容器对象-Set与WeakSet.md
@@ -312,13 +312,14 @@ class XSet extends Set {
 
 ### 4.1 WeakSet 的基本使用
 
-WeakSet 与 Set 集合一样，用来存储不重复的数据，但是 WeakSet 只能存储引用类型，尝试使用非对象设置值会抛出 TypeError，不过原始值可以先包装成对象再用作值：
+WeakSet 与 Set 集合一样，用来存储不重复的数据，但是 WeakSet 只能存储引用类型，使用非对象设置值会抛出 TypeError：
 
 ```js
 // const ws = new WeakSet();
 const val1 = { id: 1 },
   val2 = { id: 2 },
   val3 = { id: 3 }
+
 // 使用数组初始化弱集合
 const ws1 = new WeakSet([val1, val2, val3])
 console.log(ws1.has(val1)) // true
@@ -341,7 +342,9 @@ console.log(ws3.has(stringVal)) // true
 
 ### 4.2 弱值
 
-WeakSet 中 weak 表示弱集合的值是不属于正式的引用，不会阻止垃圾回收。
+WeakSet 中的对象都是弱引用，不会阻止垃圾回收，即垃圾回收机制不考虑 WeakSet 对该对象的引用，一旦其他对象不引用该对象，则会回收，不考虑对象是否还在 WeakSet 中。
+
+所以 WeakSet 适合临时存放一组对象，以及存放跟对象绑定的信息，只要这些对象在外部消失，它在 WeakSet 里面的引用就会自动消失：
 
 ```js
 // 因为没有指向这个对象的其他引用，所以当这行代码执行完成后，这个对象值就会被当作垃圾回收。然后，这个值就从弱集合中消失了，使其成为一个空集合。
