--- a/02-JavaScript语法进阶/05.1-迭代器与生成器-Iterator.md
+++ b/02-JavaScript语法进阶/05.1-迭代器与生成器-Iterator.md
@@ -1,6 +1,6 @@
 # 05.1-迭代器与生成器-Iterator
 
-## 一 迭代的概念
+## 一 迭代概念
 
 迭代的意思其实就是按照顺序反复多次执行一段程序，通常拥有明确的终止条件。在 JS 中，计数 for 循环是最简单的迭代。循环是迭代机制的基础，主要包含三个要素：
 
@@ -17,16 +17,13 @@
 
 编程语言应该为数据结构提供更加通用的迭代方法，Java、Python 在语言层面已经实现，这就是迭代器模式：开发者无须事先知道如何迭代就能实现迭代操作。
 
-## 二 迭代器模式
+## 二 迭代的实现
 
-### 2.0 迭代器模式概念
+### 2.1 迭代器模式
 
-迭代器模式其实是一个迭代方案：定义了一个迭代器接口（Iterator），实现该接口的结构可以通过迭代器 Iterator 进行消费！这种结构也称呼为可迭代对象，比如我们常见的数组、集合都是。
+迭代器模式其实是一个迭代方案：定义了一个迭代器接口（Iterator），实现该接口的结构可以通过迭代器 Iterator 进行消费！这种结构也称呼为可迭代对象，比如我们常见的数组、集合，他们都应该有一个统一的接口机制来处理所有数据。
 
-任何实现 Iterable 接口的数据结构都可以被实现 Iterator 接口的结构“消费”（ consume）。 迭代器（ iterator）是按需创建的一次性对象。每个迭代器都会关联一个可迭代对象，而迭代器会暴露迭代其关联可迭代对象的 API。迭代器无须了解与其关联的可迭代对象的结构，只需要知道如何取得连续的
-值。这种概念上的分离正是 Iterable 和 Iterator 的强大之处。
-
-### 2.1 可迭代协议
+### 2.2 可迭代协议
 
 实现 Iterable 接口（可迭代协议）要求同时具备两种能力：
 
@@ -44,7 +41,7 @@ console.log(num[Symbol.iterator]) // undefined
 console.log(obj[Symbol.iterator]) // undefined
 ```
 
-实现了 Iterator 接口的原生 JavaScript 结构有：tring、Array、Set、Map、Arguments 对象、TypedArray、NodeList 等 DOM 集合。如下所示：
+实现了 Iterator 接口的原生 JavaScript 结构有：String、Array、Set、Map、Arguments 对象、TypedArray、NodeList 等 DOM 集合，默认部署在对象的 Symbol.iterator 属性上，如下所示：
 
 ```js
 let str = 'abc'
@@ -115,7 +112,7 @@ for (let el of fooArr) {
 }
 ```
 
-### 2.2 迭代器协议
+### 2.3 迭代器协议
 
 通过迭代器工厂获得的迭代器是只能一次性使用的对象，使用 next() 方法遍历可迭代对象中的数据。每次成功调用 next()，都会返回一个 IteratorResult 对象，其中包含迭代器返回的下一个值。若不调用 next()，则无法知道迭代器的当前位置。
 
@@ -173,7 +170,7 @@ console.log(iter.next()) // { done: true, value: undefined }
 
 ## 三 自定义迭代器
 
-### 3.1 自定义迭代器
+### 3.1 实现自定义迭代器
 
 任何实现 Iterator 接口的对象都可以作为迭代器使用：
 
@@ -351,6 +348,12 @@ for (let i of iter) {
 ```
 
 ## 四 实际开发中的应用
+
+### 4.1 调用迭代器的场合
+
+一些场合会默认调用 Iterator 接口（即 Symbol.iterator 方法〉，如：for...of，解构赋值、扩展运算符、yield\*
+
+### 4.2 自定义数据遍历
 
 迭代器最重要的应用场景就是开发者自定义数据的遍历方式：
 
