--- a/02-JavaScript语法进阶/06.3-异步编程-Promise其他设置.md
+++ b/02-JavaScript语法进阶/06.3-异步编程-Promise其他设置.md
@@ -1,9 +1,8 @@
-# 06.2-异步编程-Promise 其他设置
+# 06.3-异步编程-Promise 其他设置
 
 ## 一 非重入期约方法
 
-当期约进入落定状态时，与该状态相关的处理程序仅仅会被排期，而非立即执行。跟在添加这个处理程序的代码之后的同步代码一定会在处理程序之前先执行。即使期约一开始就是与附加处理程序关联的状态，执行顺序也是这样的。这个特性由 JavaScript 运行时保证，被称为“非重入”（ non-reentrancy）
-特性。下面的例子演示了这个特性：
+当期约进入落定状态时，与该状态相关的处理程序仅仅会被排期，而非立即执行。跟在添加这个处理程序的代码之后的同步代码一定会在处理程序之前先执行。即使期约一开始就是与附加处理程序关联的状态，执行顺序也是这样的。这个特性由 JavaScript 运行时保证，被称为“非重入”（ non-reentrancy）特性。下面的例子演示了这个特性：
 
 ```js
 // 创建解决的期约
@@ -137,7 +136,7 @@ setTimeout(console.log, 0, p4) // Promise <rejected>: Error: foo
 
 期约可以以任何理由拒绝，包括 undefined，但最好统一使用错误对象。这样做主要是因为创建错误对象可以让浏览器捕获错误对象中的栈追踪信息，而这些信息对调试是非常关键的。例如，前面例子中抛出的 4 个错误的栈追踪信息如下：
 
-```js
+```txt
 Uncaught (in promise) Error: foo
 at Promise (test.html:5)
 at new Promise (<anonymous>)
