--- a/02-JavaScript语法进阶/02.1-基本类型-Symbol.md
+++ b/02-JavaScript语法进阶/02.1-基本类型-Symbol.md
@@ -1,12 +1,19 @@
 # 11.1-基本类型-Symbol
 
-## 一 Symbol 类型基本使用
+## 一 Symbol 数据类型
+
+### 1.1 基本使用
+
+ES5 的对象属性名都是字符串，这容易造成属性名的冲突。比如，我们使用了一个他人提供的对象，但又想为这个对象添加新的方法 C mixin 模式〉，新方法的名字就有可能与现有方法产生冲突 。 如果有一种机制，能够保证每个属性的名字都是独一无二的就好了，这样就能从根本上防止属性名冲突。这就是 ES6 号｜入类型 Symbol 的原因。
 
 Symbol(符号) 是 ES6 新增的基本数据类型，其实例是**唯一、不可变的**，其用途是确保对象属性使用唯一标识符，不发生属性冲突！
 
-贴士：Symbol 并不能用来作为创建对象的私有属性，因为 Object API 提供了获取 Symbol 属性的方法，且 ES 未来方案已经规定 `#` 符号表示私有属性。
+所以在 ES6 后，对象的属性名现在可以有两种类型：
 
-创建 Symbol 类型：
+- 字符串类型
+- Symbol 类型，只要属性名属于 Symbol 类型，就是唯一的，可以保证不会与其他属性名产生冲突。
+
+Symbol 值通过 Symbol 函数生成：
 
 ```js
 // 直接创建
@@ -35,6 +42,31 @@ console.log(s3 == s4) // false
 let s = Symbol()
 let sObj = Object(s)
 ```
+
+### 1.2 Symbol.for()、Symbol.keyFor() 全局符号注册表
+
+先看示例：
+
+```js
+let s1 = Symbol.for('foo')
+let s2 = Symbol.for('foo')
+console.log(s1 === s2) // true
+
+let s3 = Symbol('foo')
+console.log(s1 === s3) // false
+```
+
+通过 Symbol.for() 创建的 Symbol 会注册到一个全局表中，这个全局表内的数据可以通过 Symbol.keyFor() 查询到：
+
+```js
+let s1 = Symbol.for('foo')
+console.log(Symbol.keyFor(s1)) // foo
+
+let s2 = Symbol('bar')
+console.log(Symbol.keyFor(s2)) // undefined，如果传递的参数不是符号，则报错
+```
+
+全局注册表使用场景：运行时候的不同部分需要共享和重用符号，则可以使用一个相同的字符串作为键，在全局符号注册表中创建该符号。
 
 ## 二 Symbol 作用示例
 
@@ -103,9 +135,57 @@ const user = {
 }
 ```
 
-## 三 Symbol 作为对象属性
+贴士：Symbol 并不能用来作为创建对象的私有属性，因为 Object API 提供了获取 Symbol 属性的方法，且 ES 未来方案已经规定 `#` 符号表示私有属性。
 
-如果对象的属性是 symbol 类型，那么推荐使用反射方式获取：
+### 2.3 消除魔术字符串
+
+魔术字符串指的是，在代码之中多次出现、与代码形成强稿合的某一个具体的字符串或数值。
+
+下列示例中，我们经常会通过一个字符串参数获取一定的值：
+
+```js
+getStudents('midschool')
+```
+
+常见的方法是将 'prod' 这种字符串协程一个变量：
+
+```js
+const stu = {
+  midschool: 'midschool',
+}
+```
+
+事实上，这些属性的一般值是不需要被修改的，不如直接用 Symbol：
+
+```js
+const stu = {
+  midschool: Symbol(),
+}
+```
+
+## 三 Symbol 属性获取
+
+### 3.1 Object.getOwnPropertyNames()
+
+Symbol 类型的属性，不会出现在 `for...in`、`for...of` 中，也不会被 `Object.keys()`、 O`bject.getOwnPropertyNames()` 返回，只能通过 `Object.getOwnPropertySymbols()` 获取：
+
+```js
+const obj = {}
+const a = Symbol('a')
+const b = Symbol('b')
+
+obj[a] = 'Hello'
+obj[b] = 'World'
+
+const sbs = Object.getOwnPropertySymbols(obj)
+console.log(sbs) // [Symbol (a), Symbol (b)]
+```
+
+### 3.2 Reflect.ownKeys() 遍历所有属性
+
+使用 Object.getOwnPropertySymbols(p) ：只能遍历到 Symbol 类型属性，如果要遍历别的属性怎么办？
+
+推荐使用反射方式获取：
 
 ```js
 let s = Symbol()
@@ -115,47 +195,14 @@ let p = {
   [s]: '隐藏属性',
 }
 
-// 使用 for in 或者 for of遍历：无法遍历到 [s] 成员
-// for (const key in p){}
-// for (const key of Object.keys(p)){}
-
-// 使用 Object.getOwnPropertySymbols(p) ：只能遍历到 Symbol 类型属性
-// for(const key of Object.getOwnPropertySymbols(p)){}
-
-// 使用Reflect.ownKeys(p)： 遍历所有属性
 for (const key of Reflect.ownKeys(p)) {
   console.log(key) // name  Symbol()
 }
 ```
 
-### 四 Symbol 常用属性
+## 四 Symbol 常用属性
 
-### 4.1 Symbol.for() 全局符号注册表
-
-先看示例：
-
-```js
-let s1 = Symbol.for('foo')
-let s2 = Symbol.for('foo')
-console.log(s1 === s2) // true
-
-let s3 = Symbol('foo')
-console.log(s1 === s3) // false
-```
-
-通过 Symbol.for() 创建的 Symbol 会注册到一个全局表中，这个全局表内的数据可以通过 Symbol.keyFor() 查询到：
-
-```js
-let s1 = Symbol.for('foo')
-console.log(Symbol.keyFor(s1)) // foo
-
-let s2 = Symbol('bar')
-console.log(Symbol.keyFor(s2)) // undefined，如果传递的参数不是符号，则报错
-```
-
-全局注册表使用场景：运行时候的不同部分需要共享和重用符号，则可以使用一个相同的字符串作为键，在全局符号注册表中创建该符号。
-
-### 4.2 Symbol.hasInstance
+### 4.1 Symbol.hasInstance
 
 类似关键字 instanceof，Symbol.hasInstance 用来检查对象在其原型链上是否存在原型：
 
@@ -187,7 +234,7 @@ console.log(Fov[Symbol.hasInstance](f)) // false
 console.log(f instanceof Fov) // false
 ```
 
-### 4.3 Symbol.asyncIterator
+### 4.2 Symbol.asyncIterator
 
 Symbol.asyncIterator 是 ES2018 中实现异步迭代器 API 的函数，返回对象默认的 AsyncIterator，由 for-await-of 语句使用：
 
@@ -223,7 +270,7 @@ async function asyncCount() {
 asyncCount() // 0 1 2 3 4
 ```
 
-### 4.4 Symbol.iterator
+### 4.3 Symbol.iterator
 
 Symbol.iterator 用于返回对象默认的 Iterator，由 for-of 使用：
 
@@ -258,7 +305,7 @@ function count() {
 count() // 0 1 2 3 4
 ```
 
-### 4.5 Symbol.species
+### 4.4 Symbol.species
 
 Symbol.species 是创建派生对象的构造函数，这个属性在内置类型中最常用，用于对内置类型实例方法的返回值暴露实例化派生对象的方法。用 Symbol.species 定义静态的获取器（ getter）方法，可以覆盖新创建实例的原型定义：
 
@@ -286,7 +333,7 @@ console.log(baz instanceof Array) // true
 console.log(baz instanceof Baz) // false
 ```
 
-### 4.6 Symbol.toPrimitive
+### 4.5 Symbol.toPrimitive
 
 Symbol.toPrimitive 可以将对象转换为相应的原始值。很多内置操作都会尝试强制将对象转换为原始值，包括字符串、数值和未指定的原始类型。对于一个自定义对象实例，通过在这个实例的 Symbol.toPrimitive 属性上定义一个函数可以改变默认行为。
 
@@ -318,7 +365,7 @@ console.log(3 - bar) // 0
 console.log(String(bar)) // "string bar"
 ```
 
-### 4,7 Symbol.toStringTag
+### 4.6 Symbol.toStringTag
 
 Symbol.toStringTag 用于创建对象的默认字符串描述。通过 toString()方法获取对象标识时，会检索由 Symbol.toStringTag 指定的实例标识符，默认为"Object"。内置类型已经指定了这个值，但自定义类实例还需要明确定义：
 
@@ -344,3 +391,14 @@ console.log(bar) // Bar {}
 console.log(bar.toString()) // [object Bar]
 console.log(bar[Symbol.toStringTag]) // Bar
 ```
+
+### 4.7 其他
+
+其他还有：
+
+- Symbol.isConcatSpreadable：该属性为布尔值，表示该对象使用 `Array.prototype.concat()` 时是否可以展开。
+- Symbol.isConcatSpreadable：该属性属性指向一个函数，当执行 `str.match(myObject)` 时 ，如果该属性存在，会调用它返回该方法的返回值。
+- Symbol.replace：该属性指向一个方法，当对象被 `String.prototype.replace` 方法调用时会返回该方法的返回值。
+- Symbol.search：该属性指向一个方法，当对象被 `String.prototype.search` 方法调用时会返回该方法的返回值。
+- Symbol.split：该属性指向一个方法，当对象被 `String.prototype.split` 方法调用时会返回该方法的返回值。
+- Symbol.unscopables：该属性指向一个对象，指定了使用 with 关键字时哪些属性会被 with 环境排除。
