--- a/02-JavaScript语法进阶/07.2-代理与反射-Reflect对象.md
+++ b/02-JavaScript语法进阶/07.2-代理与反射-Reflect对象.md
@@ -1,16 +1,16 @@
-# 07.2-代理与反射-反射
+# 07.2-代理与反射-Reflect 对象
 
 ## 一 反射的基本使用
 
 ### 1.1 反射概念
 
-在 JS 运行时，能够知道这个对象的成员，并能够调用这些成员，这种动态获取信息、动态调用对象方法的功能称为反射。
+在 JS 运行时，能够知道这个对象的成员，并能够调用这些成员，这种动态获取信息、动态调用对象方法的功能称为反射。反射 API 范围很广，可以用于代理中的捕获处理程序。
 
-反射 API 范围很广，可以用于代理中的捕获处理程序。大多的反射 API 方法在 Object 类型上都有对应的方法。相比 Object 直接操作，反射更适合用于细粒度的对象控制。
+反射用于操作语言特性，但是这些方法 Object 基类对象、Reflect 反射对象都有，相比 Object 直接操作，反射更适合用于细粒度的对象控制，未来的新方法将只在 Reflect 对象上部署。
 
 ### 1.2 反射的状态标记
 
-很多反射方法返回一个布尔值，表示意图执行的操作是否成功，称作“状态标记”的布尔值。有时候，状态标记比那些返回修改后的对象或者抛出错误（取决于方法）的反射 API 方法更有用。
+与 Object 方法的返回结构，很多反射方法返回一个布尔值，表示意图执行的操作是否成功，称作“状态标记”的布尔值。有时候，状态标记比那些返回修改后的对象或者抛出错误（取决于方法）的反射 API 方法更有用，这是 Reflect 比 Object 合理的地方！
 
 例如在定义新属性时如果发生问题， Reflect.defineProperty()会返回 false，而不是抛出错误，以下是使用 Object 原生方法的实现该需求：
 
@@ -87,9 +87,10 @@ Reflect.apply(myFunc, thisVal, argumentsList)
 
 ### 2.1 优雅地书写捕获器
 
-代理的捕获器并不是都像 get() 这么简单，手动重建原始行为是不现实的，可以通过调用全局 Reflect 对象上（封装了原始行为）的同名方法来轻松重建。
+代理的捕获器并不是都像 get() 这么简单，手动重建原始行为是不现实的。而 Reflect 对象的方法与 Proxy 对象的方法一一对应，只要是 Proxy 对象的方法，就
+能在 Reflect 对象上找到对应的方法，而且也具有与被拦截方法相同的行为。所以可以通过调用全局 Reflect 对象上（封装了原始行为）的同名方法来轻松重建。
 
-处理程序对象中所有可以捕获的方法都有对应的反射（ Reflect） API 方法。这些方法与捕获器拦截的方法具有相同的名称和函数签名，而且也具有与被拦截方法相同的行为。因此，使用反射 API 也可以像下面这样定义出空代理对象：
+使用反射 API 定义出空代理对象：
 
 ```js
 const target = {
@@ -170,4 +171,54 @@ const secondProxy = new Proxy(firstProxy, {
 
 // second proxy   first proxy  bar
 console.log(secondProxy.foo)
+```
+
+## 三 Reflect 静态方法汇总
+
+- Reflect.appply(target,thisArg,args)
+- Reflect.construct(target,args)
+- Reflect.get(target,name,receiver)
+- Reflect.set(target,name,value,receiver)
+- Reflect.defineProperty(target,name,desc)
+- Reflect.deleteProperty(target,name)
+- Reflect.has(target,name)
+- Reflect.ownKeys(target)
+- Reflect.isExtensible(target)
+- Reflect.preventExtensions(target)
+- Reflect.getOwnPropertyDescriptor(target, name)
+- Reflect.getPrototypeOf(target)
+- Reflect.setPrototypeOf(target, prototype)
+
+## 四 示例：使用 Proxy 实现观察者模式
+
+观察者模式（ Observer mode ）指的是函数自动观察数据对象的模式，一旦对象有变化，函数就会自动执行：
+
+```js
+const queuedObservers = new Set()
+
+const observe = (fn) => queuedObservers.add(fn)
+
+const observable = (obj) =>
+  new Proxy(obj, {
+    set(target, key, value, receiver) {
+      const result = Reflect.set(target, key, value, receiver)
+      queuedObservers.forEach((observer) => observer())
+      return result
+    },
+  })
+
+// 被观察的目标
+const person = observable({
+  name: '张三',
+  age: 20,
+})
+
+// 观察者：一旦person数据发生变化，print就会执行
+const print = () => {
+  console.log(`${person.name}, ${person.age}`)
+}
+observe(print)
+
+// 产生数据变化，接着就会打印
+person.name = '李四'
 ```
